# RTGrapher

./: .gitignore  CMakeLists.txt  README.MD  find.sh
.lh/: .gitignore.json  CMakeLists.txt.json  README.MD.json
.lh/src/resources/: mainwindow.ui.json
src/: main.cpp
src/controllers/header/: DataController.hpp
src/controllers/source/: DataController.cpp
src/models/header/: datagenerator.hpp
src/models/source/: datagenerator.cpp
src/resources/: mainwindow.ui
src/views/header/: ControlPanel.hpp  GraphWidget.hpp  MainWindow.hpp  ResultWidget.hpp
src/views/source/: ControlPanel.cpp  GraphWidget.cpp  MainWindow.cpp  ResultWidget.cpp
